--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>GymApp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="/appIcon.svg">
   <script src="https://cdn.hugeicons.com/icons.js"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
 </head>
